--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage.iOS/TabbedPage_with_NavigationPage.iOS.csproj
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage.iOS/TabbedPage_with_NavigationPage.iOS.csproj
@@ -140,6 +140,15 @@
       <Name>TabbedPage_with_NavigationPage</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_home_2x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_home_3x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_home.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
