--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage.iOS/TabbedPage_with_NavigationPage.iOS.csproj
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage.iOS/TabbedPage_with_NavigationPage.iOS.csproj
@@ -161,6 +161,24 @@
   <ItemGroup>
     <BundleResource Include="Resources\ic_home.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_assignment.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_assignment_2x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_assignment_3x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_accessibility_2x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_accessibility_3x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_accessibility.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
