--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/TabbedPage_with_NavigationPage.csproj
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/TabbedPage_with_NavigationPage.csproj
@@ -63,6 +63,9 @@
     <Compile Include="TopPage.xaml.cs">
       <DependentUpon>TopPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View1.xaml.cs">
+      <DependentUpon>View1.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
@@ -120,6 +123,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LogPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View1.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
